--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/online-shop?serverTimezone=UTC
-spring.datasource.username=online-shop
-spring.datasource.password=online-shop
+#using yaml configuration instead
+#server.port=8082
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/online-shop?serverTimezone=UTC
+#spring.datasource.username=online-shop
+#spring.datasource.password=online-shop
